# vq

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: Symbols.cmake  Windeployqt.cmake
cmake/toolchain/: linux.cmake  msvc.cmake
src/: CMakeLists.txt  main.cpp  main.rc
src/gui/: Gui.cpp  Gui.hpp  ProjectWidget.cpp  ProjectWidget.hpp  Window.cpp  Window.hpp
src/model/: OutputGenerator.cpp  OutputGenerator.hpp  ProjectDescription.hpp  TokenizedString.hpp  VcxprojParser.cpp  VcxprojParser.hpp  XmlValuesExtractor.hpp
